2001-01-12  Dominique Dumont  <domi@komarr.grenoble.hp.com> v1.020

	* ObjScanner.pm:
	- added pseudo hash viewer

2000-06-07  Dominique Dumont  <domi@ISPSERV.grenoble.hp.com> v1.019

	* ObjScanner.pm: 

	1: Use Adjuster so that the user can adjust the relative heights
	of the HList window and the dump window.
	2: Provide 5 options for setting colors and images
	3: Impose the same scrollbar style ('osoe') to HList and ROText.
	4: Set -wideselection 0 for HList.
	5: add 'open folder' image and display it when item has displayed
	   children

2000-04-17  Dominique Dumont  <domi@ispserv.grenoble.hp.com> v1.018

	* ObjScanner.pm: 
	- fixed a bug related to root display
	- added a patch provided by Rudi Farkas to display a watch cursor
	  when displaying a sub-object

1999-07-06  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.017

	* ObjScanner.pm (element): bug fix on string display
	* Thanks to Rudi Farkas for contributing test cases with
	Math::BigInt and Filehandle

1999-05-31  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.016

	* ObjScanner.pm: 
	- Better support of complex (perl wise) objects
	- added 'destroyable' parameters
	- updated 'CAVEATS' doc

1999-04-29  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.014

	* ObjScanner.pm (element): Support REF and SCALAR, and does not
 	choke on GLOB ,CODE.

1999-04-21  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.013

	* ObjScanner.pm : Complete re-write. It now uses HList instead of 
	data dumper.

1999-01-20  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.11

	* ObjScanner.pm: removed dependance on Tk::Multi, better doc,
          don't wrap lines in Text widget.

v0.5: 1998-08-18  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* ObjScanner.pm: simplified and adapted for new Multi::Text

1998-06-25  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* 0.4 cleanup remaining traces in test.pl

Tue Mar 17 15:09:42 1998  Dominique Dumont  <domi@marlis.grenoble.hp.com>
